Fix dark mode from print breakage

--- a/static/css/messynotes.css
+++ b/static/css/messynotes.css
@@ -42,10 +42,6 @@
         --footer-display: none;
     }
 
-    body {
-        margin: 1em 5em 1em 5em;
-    }
-
     div#singleMetadata {
         display: none;
     }
@@ -68,6 +64,7 @@ body {
     font-family: var(--serif);
     background-color: var(--bg);
     color: var(--fg);
+    margin: 1em 5em 1em 5em;
 }
 h1 {
     text-align: center;
@@ -99,12 +96,14 @@ table {
 th {
     padding: .5em;
     background-color: #d9d9d9;
+    color: black;
 }
 td,th {
     padding: .25em;
 }
 tr:nth-child(even) {
     background-color: #f2f2f2;
+    color: black;
 }
 
 /* navigation */
